main width m/75vw

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ main {
   padding: 1%;
   background-color: white;
   margin: 3rem auto;
-  width: 90%;
+  width: 75vw;
   border-radius: 20px;
   box-shadow: 12px 12px 2px;
 }
