--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,9 @@
 
 body {
   background-color: var(--primary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 svg {
   width: 100%;
@@ -28,7 +31,6 @@ main {
   text-align: center;
   padding: 1%;
   background-color: white;
-  margin: 3rem auto;
   width: 75vw;
   border-radius: 20px;
   box-shadow: 12px 12px 2px;
